24.jun (ws)
      - Scale hyphens in lyrics with text size.
      - Remove shortcut for zoomout in edit mode. It conflicts with
        Ctrl+- to enter a lyrics hyphen.
      - fix crash when changing volta properties
      - part and staff property changes are now undoable
23.jun (ws)
      - add "size" to font in chord description file
      (la)
      - fix: crash on save a copy
      - enable sorting of shortcuts in preferences
      (db)
      - Remove faulty "hemidemisemiquaver" text from en_GB translation
      - Fix lyric hyphen line to more closely approximate dimensions of
        an actual hyphen
      - Adjust size of preferences dialog for small screen sizes
22.jun (ws)
      - fix: removing staff causes crash if multi-staff bar
      - added symbol for sus4 to jazzfont
      - fix drag and drop percussion crash
      - again: make sure a valid duration is set in note entry mode
21.jun (ws)
      - allow notes above first line in drumset
      - fix crash when extending volta
      - fix multi selection
      - make sure a valid duration is set in note entry mode
      - fix "Trill line position not saved"
      - fix fontsize in chord names
      - paste chordnames and lyrics to the right staff
16.jun (la)
      - remove dominant-seventh for musicXML import. dominant is correct.
      - fix chordname default style for flat and sharp
      - small fix on png screenshot
      (db)
      - fix display of root notes for regular chords.xml
      - update Dutch translation and instruments file from Jaap Plaisier
      (tb)
      - committing draft of Arabic translation by HosAdeeb
12.jun (db)
      - fix drag and drop of files on Windows
      - closing the rightmost tab changes current score to next rightmost
        tab instead of of reverting to the leftmost tab
      - correct pitch ranges for Bb and C trumpet
      - update French translation from JLWaltener
8.jun (ws)
      - move to Qt4.5.1 for windows cross build